<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_contact_title"
            android:id="@+id/editContactTextView"
            android:layout_column="0"
            android:padding="@dimen/padding_5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:id="@+id/firstNameTextView"
            android:layout_column="0"
            android:padding="@dimen/padding_5dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/firstNameEditText"
            android:layout_column="1"
            android:layout_weight="1"
            android:padding="@dimen/padding_5dp"
            android:inputType="textPersonName" >
            <requestFocus/>
        </EditText>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:id="@+id/lastNameTextView"
            android:layout_column="0"
            android:padding="@dimen/padding_5dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lastNameEditText"
            android:layout_column="1"
            android:layout_weight="1"
            android:padding="@dimen/padding_5dp"
            android:inputType="textPersonName" >

        </EditText>

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:id="@+id/phoneNumberTextView"
            android:layout_column="0"
            android:padding="@dimen/padding_5dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneNumberEditText"
            android:layout_column="1"
            android:layout_weight="1"
            android:padding="@dimen/padding_5dp"
            android:inputType="phone" >
        </EditText>

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:id="@+id/emailTextView"
            android:layout_column="0"
            android:padding="@dimen/padding_5dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailEditText"
            android:layout_column="1"
            android:layout_weight="1"
            android:padding="@dimen/padding_5dp"
            android:inputType="textEmailAddress" >
        </EditText>

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_address"
            android:id="@+id/addressTextView"
            android:layout_column="0"
            android:padding="@dimen/padding_5dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addressEditText"
            android:layout_column="1"
            android:layout_weight="1"
            android:padding="@dimen/padding_5dp"
            android:inputType="textPostalAddress" >
        </EditText>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_button"
            android:id="@+id/editButton"
            android:layout_column="0"
            android:layout_weight="1"
            android:onClick="editContact"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"
            android:id="@+id/deleteButton"
            android:layout_column="0"
            android:layout_weight="2"
            android:onClick="removeContact"/>
    </TableRow>

</TableLayout>
